[gd_scene load_steps=7 format=2]

[ext_resource path="res://GUI/Lobby_v2/Lobby_v2.gd" type="Script" id=1]
[ext_resource path="res://GUI/WaitingRoom.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Audio/Music/Lurking Sloth.mp3" type="AudioStream" id=3]
[ext_resource path="res://GUI/Lobby_v2/connecting_to_host_popup.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/Host_Missing_Screen.tscn" type="PackedScene" id=5]
[ext_resource path="res://GUI/Settings.tscn" type="PackedScene" id=6]

[node name="Lobby_v2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 924.0
margin_bottom = 500.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 924.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 924.0
margin_bottom = 50.0
color = Color( 0.0431373, 0.435294, 0.615686, 1 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 924.0
margin_bottom = 50.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/CenterContainer"]
margin_left = 289.0
margin_right = 635.0
margin_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/HBoxContainer2"]
margin_top = 18.0
margin_right = 42.0
margin_bottom = 32.0
text = "Name:"

[node name="NameEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/HBoxContainer2"]
margin_left = 46.0
margin_top = 13.0
margin_right = 346.0
margin_bottom = 37.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 4
max_length = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 924.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_host" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 460.0
margin_bottom = 446.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel_host"]
margin_right = 460.0
margin_bottom = 446.0
size_flags_horizontal = 3
color = Color( 0.129412, 0.690196, 0.223529, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel_host"]
margin_right = 460.0
margin_bottom = 446.0

[node name="null" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel_host/VBoxContainer"]
margin_right = 460.0

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel_host/VBoxContainer"]
margin_top = 4.0
margin_right = 460.0
margin_bottom = 28.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel_host/VBoxContainer/CenterContainer2"]
margin_left = 115.0
margin_right = 345.0
margin_bottom = 24.0

[node name="PortLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel_host/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_top = 5.0
margin_right = 26.0
margin_bottom = 19.0
text = "Port"
align = 2

[node name="PortEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel_host/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 30.0
margin_right = 230.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
text = "32032"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel_host/VBoxContainer"]
margin_top = 32.0
margin_right = 460.0
margin_bottom = 52.0

[node name="HostButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel_host/VBoxContainer/CenterContainer"]
margin_left = 188.0
margin_right = 272.0
margin_bottom = 20.0
text = "Host Game"

[node name="Panel_connect" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 464.0
margin_right = 924.0
margin_bottom = 446.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel_connect"]
margin_right = 460.0
margin_bottom = 446.0
size_flags_horizontal = 3
color = Color( 0.0627451, 0.478431, 0.407843, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel_connect"]
margin_right = 460.0
margin_bottom = 446.0

[node name="null" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel_connect/VBoxContainer"]
margin_right = 460.0

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel_connect/VBoxContainer"]
margin_top = 4.0
margin_right = 460.0
margin_bottom = 56.0

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel_connect/VBoxContainer/CenterContainer2"]
margin_left = 115.0
margin_right = 345.0
margin_bottom = 52.0
columns = 2

[node name="PortLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel_connect/VBoxContainer/CenterContainer2/GridContainer"]
margin_top = 5.0
margin_right = 26.0
margin_bottom = 19.0
text = "Port"
align = 2

[node name="PortEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel_connect/VBoxContainer/CenterContainer2/GridContainer"]
margin_left = 30.0
margin_right = 230.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
text = "32032"

[node name="PortLabel2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel_connect/VBoxContainer/CenterContainer2/GridContainer"]
margin_top = 33.0
margin_right = 26.0
margin_bottom = 47.0
text = "IP"
align = 2

[node name="HostIPEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel_connect/VBoxContainer/CenterContainer2/GridContainer"]
margin_left = 30.0
margin_top = 28.0
margin_right = 230.0
margin_bottom = 52.0
rect_min_size = Vector2( 200, 0 )
text = "127.0.0.1"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel_connect/VBoxContainer"]
margin_top = 60.0
margin_right = 460.0
margin_bottom = 80.0

[node name="JoinButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel_connect/VBoxContainer/CenterContainer"]
margin_left = 191.0
margin_right = 268.0
margin_bottom = 20.0
text = "Join Game"

[node name="WaitingRoom" parent="." groups=["WaitingRoom"] instance=ExtResource( 2 )]

[node name="ItemList" parent="WaitingRoom/VBoxContainer/CenterContainer" index="0"]
margin_top = 13.0
margin_bottom = 13.0
items = [ "Item 0", null, false ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Music"

[node name="Blur" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.862745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="connecting_to_host" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -144.5
margin_right = 160.0
margin_bottom = 144.5

[node name="Host_Missing_Screen" parent="." instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.5
margin_top = -194.0
margin_right = 151.5
margin_bottom = 194.0

[node name="Settings" parent="." instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -218.5
margin_top = -161.0
margin_right = 218.5
margin_bottom = 161.0

[connection signal="text_changed" from="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/HBoxContainer2/NameEdit" to="." method="_on_NameEdit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Panel_host/VBoxContainer/CenterContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/Panel_connect/VBoxContainer/CenterContainer2/GridContainer/HostIPEdit" to="." method="_on_HostIPEdit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Panel_connect/VBoxContainer/CenterContainer/JoinButton" to="." method="_on_JoinButton_pressed"]

[editable path="WaitingRoom"]
[editable path="WaitingRoom/VBoxContainer/CenterContainer3/HBoxContainer2/Time_box"]
